--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "stripe/stripe-php": "^10.3"
     },
     "require-dev": {
