--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "laravel/ui": "^3.4",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "stevebauman/location": "^6.5",
-        "stripe/stripe-php": "^10.3"
+        "stripe/stripe-php": "^10.3",
+        "tymon/jwt-auth": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
