--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
         "laravel/ui": "^3.4",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "stevebauman/location": "^6.5",
-        "stripe/stripe-php": "^10.3",
-        "tymon/jwt-auth": "*"
+        "stripe/stripe-php": "^10.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
