--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "stevebauman/location": "^6.5",
         "stripe/stripe-php": "^10.3",
         "tymon/jwt-auth": "dev-develop"
