--- a/composer.json
+++ b/composer.json
@@ -16,22 +16,23 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.7",
         "jeroendesloovere/vcard": "^1.7",
-        "laravel/framework": "^8.75",
+        "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "openai-php/laravel": "^0.3.4",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "stevebauman/location": "^6.5",
         "stripe/stripe-php": "^10.3",
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
+        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^5.10",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
